# next-fastApi

./: .env  .pre-commit-config.yaml  Makefile  config.toml  package-lock.json  package.json  pyproject.toml
app/: layout.tsx  page.tsx
app/games/[id]/: page.tsx
app/games/[id]/join/: page.tsx
components/: buttons.tsx  input.tsx
etc/: constants.ts
src/: constants.py  core.py  main.py
src/api/: crud.py  exceptions.py  models.py  shortcuts.py  validators.py  views.py
src/db/: utils.py
src/pet/: settings.py
