[tool.poetry]
name = "petfastapi"
version = "0.1.0"
description = ""
authors = [
    "AndelGG"
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
mypy = "^1.15.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
